<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="21dp"
    tools:context=".ui.fragments.user.UserFragment">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextTitle"
        android:layout_marginTop="74dp"
        android:text="@string/my_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_yellow_user_for_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_profile"
        style="@style/TextEditTextProfile"
        android:layout_marginStart="25dp"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile"
        app:layout_constraintStart_toEndOf="@id/iv_profile"
        app:layout_constraintTop_toTopOf="@id/iv_profile" />

    <ImageView
        android:id="@+id/iv_my_orders"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/ic_yellow_bag_for_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_my_orders"
        style="@style/TextEditTextProfile"
        android:layout_marginStart="25dp"
        android:text="@string/my_orders"
        app:layout_constraintBottom_toBottomOf="@id/iv_my_orders"
        app:layout_constraintStart_toEndOf="@id/iv_my_orders"
        app:layout_constraintTop_toTopOf="@id/iv_my_orders" />

    <ImageView
        android:id="@+id/iv_address"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/ic_yellow_location_for_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_my_orders"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_address"
        style="@style/TextEditTextProfile"
        android:layout_marginStart="25dp"
        android:text="@string/address"
        app:layout_constraintBottom_toBottomOf="@id/iv_address"
        app:layout_constraintStart_toEndOf="@id/iv_address"
        app:layout_constraintTop_toTopOf="@id/iv_address" />

</androidx.constraintlayout.widget.ConstraintLayout>