<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="30dp"
    tools:context=".ui.fragments.sign_in.SignInFragment">

    <ImageView
        android:layout_width="83dp"
        android:layout_height="66dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/custom_caps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:fontFamily="@font/sf_ui_display_bold"
        android:text="@string/sign_in"
        android:textColor="@color/black_text"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="220dp"
        android:alpha="0.3"
        android:background="@color/black_text"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_num_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_60"
        android:layout_marginTop="250dp"
        android:drawableStart="@drawable/num_phone_icon"
        android:drawablePadding="20dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:hint="@string/num_phone"
        android:inputType="phone"
        android:textColor="@color/black_text"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_60"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="20dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black_text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/et_num_phone" />

    <TextView
        android:id="@+id/tv_not_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/not_registration"
        android:textColor="@color/black_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/registration"
        android:textColor="@color/blue_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/black_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_not_registration" />

    <TextView
        android:id="@+id/tv_restore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/restore"
        android:textColor="@color/blue_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_registration" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="220dp"
        android:layout_height="@dimen/btn_height_60"
        android:layout_marginTop="550dp"
        android:backgroundTint="@color/btn_background_color"
        android:enabled="false"
        android:fontFamily="@font/sf_ui_text_heavy"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/btn_text_color"
        android:textSize="16sp"
        app:cornerRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginEnd="5dp"
        android:alpha="0.3"
        android:background="@color/black_text"
        app:layout_constraintBottom_toBottomOf="@id/tv_or"
        app:layout_constraintEnd_toStartOf="@id/tv_or"
        app:layout_constraintTop_toTopOf="@id/tv_or" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="640dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        android:text="@string/or"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:alpha="0.3"
        android:background="@color/black_text"
        app:layout_constraintBottom_toBottomOf="@id/tv_or"
        app:layout_constraintStart_toEndOf="@id/tv_or"
        app:layout_constraintTop_toTopOf="@id/tv_or" />

    <ImageView
        android:id="@+id/iv_facebook"
        android:layout_width="@dimen/btn_height_60"
        android:layout_height="@dimen/btn_height_60"
        android:adjustViewBounds="true"
        android:src="@drawable/facebook"
        app:layout_constraintEnd_toStartOf="@id/view2"
        app:layout_constraintTop_toTopOf="@id/view2"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/view2"
        android:layout_width="16dp"
        android:layout_height="1dp"
        android:layout_marginTop="700dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_google"
        android:layout_width="@dimen/btn_height_60"
        android:layout_height="@dimen/btn_height_60"
        android:adjustViewBounds="true"
        android:src="@drawable/google"
        app:layout_constraintStart_toEndOf="@id/view2"
        app:layout_constraintTop_toTopOf="@id/view2"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>