<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="21dp"
    tools:context=".ui.fragments.edit_profile.EditProfileFragment">

    <ImageView
        android:id="@+id/iv_back"
        style="@style/ImageRoundBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextTitle"
        android:layout_marginTop="30dp"
        android:text="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <androidx.cardview.widget.CardView
        android:id="@+id/container_for_image_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="37dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_back_for_start_fragment"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@color/white_70"
            android:padding="20dp"
            android:src="@drawable/ic_plus_for_edit_profile_image"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/et_name"
        style="@style/TextEditTextProfile"
        android:layout_marginStart="15dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="38dp"
        android:fontFamily="@font/sf_ui_display_bold"
        android:hint="@string/enter_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/container_for_image_profile"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:ignore="Autofill" />

    <ImageView
        android:id="@+id/iv_email"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="42dp"
        android:src="@drawable/ic_yellow_message_for_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_for_image_profile"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <EditText
        android:id="@+id/et_email"
        style="@style/TextEditTextProfile"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="38dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@id/iv_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_email"
        app:layout_constraintTop_toTopOf="@id/iv_email"
        tools:ignore="Autofill" />

    <ImageView
        android:id="@+id/iv_phone_number"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_yellow_phone_for_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_email"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <EditText
        android:id="@+id/et_phone_number"
        style="@style/TextEditTextProfile"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="38dp"
        android:hint="@string/enter_phone_num"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@id/iv_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_phone_number"
        app:layout_constraintTop_toTopOf="@id/iv_phone_number"
        tools:ignore="Autofill" />

    <ImageView
        android:id="@+id/iv_address"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_yellow_location_for_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_phone_number"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <EditText
        android:id="@+id/et_address"
        style="@style/TextEditTextProfile"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="38dp"
        android:hint="@string/enter_address"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@id/iv_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_address"
        app:layout_constraintTop_toTopOf="@id/iv_address"
        tools:ignore="Autofill" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_profile"
        style="@style/YellowBtnStyle"
        android:layout_marginHorizontal="8dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_address" />

</androidx.constraintlayout.widget.ConstraintLayout>