<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_start_back"
    tools:context=".ui.fragments.start.StartFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/img_back_for_start_fragment"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="83dp"
        android:layout_height="66dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/img_custom_caps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_ui_text_heavy"
        android:text="CUSTOM CAPS"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/cap_store"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        style="@style/YellowBtnStyle"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_in"
        android:textColor="@color/black_text"
        app:layout_constraintBottom_toTopOf="@id/btn_reg_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reg_acc"
        style="@style/YellowBtnStyle"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="@color/black_text_54"
        android:text="@string/registration"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>